--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10966,6 +10966,10 @@ body {
   font-family: "Didact Gothic", sans-serif;
 }
 
+trix-editor {
+  min-height: 300px;
+}
+
 .bg-primary .navbar-brand {
   color: white;
   font-family: "Fredoka One", cursive;
