Ajustes Panel de Administracion
*-Se enlaza el panel de adm con 'Ver perfil'
*-Se agregan iconos y se ajustan los btns
*-Se crea un nuevo policy desde artisan para proteger la edicion de perfiles
*-Se implementa la paginas de recetas
*-Se muestran las recetas creadas por el usuario en su propio perfil

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10968,6 +10968,7 @@ body {
 
 trix-editor {
   min-height: 300px;
+  height: auto !important;
 }
 
 .bg-primary .navbar-brand {
@@ -10978,5 +10979,9 @@ trix-editor {
 
 .bg-primary .navbar-brand:hover {
   color: white;
+}
+
+.icono {
+  width: 36px;
 }
 
